<resources>
    <string name="app_name">DOUYIN SAVER</string>
    <string name="download">Tải xuống</string>
    <string name="patselink">Dán liên kết</string>
    <string name="luuy">Lưu ý: Vui lòng tôn trọng tác phẩm gốc và quyền sở hữu trí tuệ</string>
    <string name="share_to">Chia sẻ tới...</string>
    <string name="delete">Xóa</string>
    <string name="help">Hướng dẫn sử dụng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buoc1_cach1">Mở ứng dụng, nhấp vào “Chia sẻ lên” của bài đăng</string>
    <string name="buoc2_cach1">Nhấp vào “Sao chép liên kết" rồi mở app “DOUYIN SAVER"</string>
    <string name="buoc3_cach1">Dán liên kết vừa sao chép vào đây, và tải về video thôi</string>
    <string name="DaHieu">Đã hiểu</string>
    <string name="nameCach2">Tải  xuống bằng cách chia sẻ</string>
    <string name="buoc2_cach2">Vuốt sang trái và nhấp vào “Khác"</string>
    <string name="tuychontaixuong">Tuỳ chọn tải xuống</string>
    <string name="Tiktok_Suffix">Tiktok_</string>
    <string name="tiktok_Suffix">tiktok_</string>
    <string name="url_error">enter a valid url</string>
    <string name="download_start">Starting Download</string>
    <string name="api_key">73135137fcmsh589dcae25a44bf0p198052jsn12c80012d291</string>
    <string name="api_host_yi005">tiktok-video-no-watermark2.p.rapidapi.com</string>
    <string name="url_api_yi005">https://tiktok-video-no-watermark2.p.rapidapi.com/?url=</string>
    <string name="api_host_yi005_1">tiktok-download-without-watermark.p.rapidapi.com</string>
    <string name="url_api_yi005_1">https://tiktok-download-without-watermark.p.rapidapi.com/analysis?url=</string>
    <string name="api_host_maatootz">tiktok-downloader-download-tiktok-videos-without-watermark.p.rapidapi.com</string>
    <string name="url_api_maatootz">https://tiktok-downloader-download-tiktok-videos-without-watermark.p.rapidapi.com/vid/index?url=</string>
    <string name="video_quality">Chất lượng video?</string>
    <string name="no_file_download">Chưa có mục tải xuống</string>
    <string name="share_file">Chia sẻ file qua</string>
    <string name="no_internet">Không có kết nối internet</string>
    //
    <string name="AD_UNIT_ID">ca-app-pub-3940256099942544/5224354917</string>
    <string name="ADS_ID">ca-app-pub-3940256099942544~3347511713</string>
    //
    <string name="no_ads">Không có quảng cáo</string>
    <string name="trainghiem">Trải nghiệm thoải mái hơn</string>
    <string name="delete_ads">Xóa quảng cáo</string>
</resources>