<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="630dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:background="@drawable/boder_popumenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:paddingRight="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/featured_icon" />

                <ImageView
                    android:id="@+id/img_close"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:padding="10dp"
                    android:src="@drawable/x_close" />
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/no_ads"
                    android:textAppearance="@style/textBold_dialog_noads" />
                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/trainghiem"
                    android:textAppearance="@style/text1_dialog_noads" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_weight="1">
            <ListView
                android:dividerHeight="12dp"
                android:padding="10dp"
                android:id="@+id/lv_vip"
                android:layout_width="match_parent"
                android:layout_height="400dp"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_buy"
                android:textAllCaps="false"
                android:text="@string/delete_ads"
                style="@style/textBtn_delete_ads"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/btn_delete_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>