<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout_main"
    android:background="#F3F3F3"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:weightSum="80"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#F3F3F3"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include2"
            layout="@layout/toolbar_home" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/textinput_laypout"
            android:gravity="center"
            app:hintEnabled="false"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_setLink"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/textinput"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout"
                tools:layout_editor_absoluteX="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:layout_marginLeft="24dp"
                android:id="@+id/btn_paste"
                style="@style/pastelinkButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/patselink"
                android:textAllCaps="false"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_1"
                style="@style/downloadButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textSize="15dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="24dp"
                android:textColor="@color/main"
                android:id="@+id/textView"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="70dp"
                android:text="@string/luuy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />



        </LinearLayout>

        <RelativeLayout
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:elevation="10dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageView
                android:id="@+id/roundedImageView"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/white"
                android:scaleType="centerCrop" />
            <pl.droidsonroids.gif.GifImageView
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:id="@+id/gif_image_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@android:color/transparent"
                android:src="@drawable/gifdefault" />
        </RelativeLayout>


    </LinearLayout>
</FrameLayout>
